Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer. Palo Alto Networks Careers - Senior Big Data Engineer (Cortex XDR). Trianz Careers - Director, Data Engineering. Job Application for Data Engineer at Properly. Data Engineer | Averity. Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters. Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters. Job @ REK-Swiss (Bern): Data Engineer / Data Analy... | JOIN. Data Engineer (Contract To Hire) - Trantor Software. BI / Data Engineer (H/F) - Frichti. Data Engineer - TrueData. Data Engineer - 10Pearls. Data Engineer - 10Pearls. Data Engineer - 080519 - SirionLabs Pvt Ltd. Infoblox Careers - Senior Data Engineer.       Data Engineer - São Paulo - Oncase     . Job @ Ava (Zürich): Data Engineer (80-100%) | JOIN. Data Engineer at Sky. Senior Software Data Engineer - Levelset - Career Page. Job Application for Data Engineer at Coupang. Stellenangebot: Data Engineer (m/w/d) (Berlin) – dasauge® Stellenmarkt. Senior Data Engineer | Averity. CapTech Consulting Data Engineer | SmartRecruiters. Job Application for Data Engineer, Growth/Forecasting at Snowflake. Job Application for Senior Data Engineer at CardinalCommerce. Big Data Engineer - IntelliPro Group Inc. - Career Page. Freedom Financial Network Careers - Data Engineer. Nine Senior Data Engineer | SmartRecruiters. Lead Data Engineer - Cover - Career Page. Job Application for 1713323 - Big Data Engineer at Altisource.       Data Engineer - OpenClassrooms     . Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters. Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters. TitanData Inc. Sr. Big Data Engineer | SmartRecruiters. Broadridge Senior Cloud Data Engineer (Contract) | SmartRecruiters. Rescale - Senior Data Engineer. Associate Director, Data Engineering - Assembly - Career Page. CapTech Consulting Senior Data Engineer | SmartRecruiters. Software Data Engineer - Levelset - Career Page. Software Da

--- a/data-engineer.html
+++ b/data-engineer.html
@@ -69,6 +69,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=s0RQZgwr&__jvsc=Twitter&bid=n3d9oMw4'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o0Spbfwc&__jvst=Employee+Referral&__jvsd=sdujEgwp&__jvsc=Twitter&bid=nkN8nMwT'>Palo Alto Networks Careers - Senior Big Data Engineer (Cortex XDR)</a></h5> 
+<p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/trianz/job/o6Prbfwh'>Trianz Careers - Director, Data Engineering</a></h5> 
 <p><span class="badge badge-light">San Jose, California  Santa Clara, California  San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -113,7 +121,7 @@ generate mobile data and the apps, agencies, brands, and ad tech companies?...</
 <p>Oct 18, 2019 ... We are looking for a ?Data Engineer?. Ideal candidate should have a Bachelor's 
 degree in Computer Science with 2 ? 3 years of programming experience on?...</p>
 <hr/>
-<h5><a href='https://apply.workable.com/10pearls/j/2CD6820499/apply/'>Data Engineer - 10Pearls</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/10pearls/j/2CD6820499/apply/'>Data Engineer - 10Pearls</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... 10Pearls is an end-to-end digital technology services partner that helps 
 businesses with innovative product development, digitalization of existing 
@@ -162,7 +170,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4455560002'>Job Application for Data Engineer, Growth/Forecasting at Snowflake</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4455560002'>Job Application for Data Engineer, Growth/Forecasting at Snowflake</a></h5> 
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -170,7 +178,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/pWD0yTZrZi/Big-Data-Engineer'>Big Data Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/pWD0yTZrZi/Big-Data-Engineer'>Big Data Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -256,7 +264,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698267845-data-engineer-equipe-recommandation-f-h'>Adevinta Data Engineer / Equipe recommandation F-H | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999698267845-data-engineer-equipe-recommandation-f-h'>Adevinta Data Engineer / Equipe recommandation F-H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -328,7 +336,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sonos.avature.net/jobs/RegisterMethod?jobId=6865'>2020 New Grad | Data Engineering - Sonos | Jobs</a></h5> 
+<h5><a href='https://sonos.avature.net/jobs/RegisterMethod?jobId=6865'>2020 New Grad | Data Engineering - Sonos | Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... How do you want to apply? Choose an option to apply for 2020 New Grad | Data 
 Engineering. Upload a file. Use Dropbox?...</p>
@@ -369,7 +377,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/covergenius/e6393c36-2fd6-43ac-96e0-bfccf3dc7aeb'>Cover Genius - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/covergenius/e6393c36-2fd6-43ac-96e0-bfccf3dc7aeb'>Cover Genius - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Sydney</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -428,7 +436,7 @@ Individuals seeking employment at Hinge are considered without regards to race,
 <p><span class="badge badge-light">Greece  Greece</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://metricarecruitment.com/jobs/data-engineer-london-26404/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://metricarecruitment.com/jobs/data-engineer-london-26404/'>
 Data Engineer Job in London ?55K-?70K</a></h5> 
 <p><span class="badge badge-light">London London?  London</span></p>
 <p>Posted on:: 2019-10-25</p>
@@ -481,14 +489,6 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <hr/>
 <h5><a href='http://fractalanalytics.applytojob.com/apply/hh8bba3Yc4/Data-Engineer'>Data Engineer - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light">Gurgaon, India</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999698069190-data-engineer-sales'>Square Data Engineer, Sales | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/optimusride/dc2d83ea-b689-422c-88cb-9556df3aa2d4'>Optimus Ride - Data Engineer</a></h5> 
-<p><span class="badge badge-light">Boston, MA  Boston</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
