--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -145,7 +145,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/payu/jobs/4497509002'>Job Application for Senior Business Intelligence Specialist at PayU</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/payu/jobs/4497509002'>Job Application for Senior Business Intelligence Specialist at PayU</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -165,7 +165,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MicroStrategy1/743999698293567-business-intelligence-analyst'>MicroStrategy Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MicroStrategy1/743999698293567-business-intelligence-analyst'>MicroStrategy Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -177,7 +177,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qODaVfwg&k=Job&j=oK05afwJ&__jvst=Employee+Referral&__jvsd=syFYDhwA&__jvsc=Twitter&bid=ne7MlMwJ'>Abrigo Careers - Business Intelligence Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qODaVfwg&k=Job&j=oK05afwJ&__jvst=Employee+Referral&__jvsd=syFYDhwA&__jvsc=Twitter&bid=ne7MlMwJ'>Abrigo Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -278,11 +278,11 @@ agile and geographically-dispersed BI team, focused on facilitating a company?..
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/hkstrategies/job/oyvpbfwn'>Hill+Knowlton Strategies Careers - Coordenador de Business Intelligence - Comunica??o</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/hkstrategies/job/oyvpbfwn'>Hill+Knowlton Strategies Careers - Coordenador de Business Intelligence - Comunica??o</a></h5> 
 <p><span class="badge badge-light">Sao Paulo, Brazil</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/99taxis/29b5c2bc-7584-4d86-b617-749c65539b8f'>DiDi Global - Business Intelligence Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/99taxis/29b5c2bc-7584-4d86-b617-749c65539b8f'>DiDi Global - Business Intelligence Specialist</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -322,7 +322,7 @@ using?...</p>
 <p><span class="badge badge-light">Luxembourg Luxembourg</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hearst.referrals.selectminds.com/jobs/data-and-business-intelligence-analyst-7335'>Data and Business Intelligence Analyst - Hearst Careers</a></h5> 
+<h5><a href='https://hearst.referrals.selectminds.com/jobs/data-and-business-intelligence-analyst-7335'>Data and Business Intelligence Analyst - Hearst Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -370,7 +370,7 @@ using?...</p>
 <p><span class="badge badge-light">NYC</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://miacar.join.com/jobs/160708-business-intelligence-manager-miacar-m-f-d'>Job @ MIACAR (Z?rich): Business Intelligence Manag... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://miacar.join.com/jobs/160708-business-intelligence-manager-miacar-m-f-d'>Job @ MIACAR (Z?rich): Business Intelligence Manag... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
@@ -407,7 +407,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Venice, CA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://faraday.ac.uk/business-intelligence-manager/'>BUSINESS INTELLIGENCE MANAGER ? The Faraday Institution</a></h5> 
+<h5><a href='https://faraday.ac.uk/business-intelligence-manager/'>BUSINESS INTELLIGENCE MANAGER ? The Faraday Institution</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
