--- a/software.html
+++ b/software.html
@@ -39,16 +39,24 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oYsyafwS&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=ned9oMwf'>Cirrus Logic Careers - Software Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oE7O9fws&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nN29oMwD'>Gigamon Careers - Staff Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
 <h5><a href='https://www.womenwhocode.com/jobs/5423?utm_source=hootsuite&utm_medium=&utm_term=&utm_content=&utm_campaign='>Principal Software Engineer, Web Platform - H-E-B Digital | Women Who Code</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/datto/jobs/1924050'>Job Application for Enterprise Systems - Software Engineer 1 at Datto Inc.</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/copperleaf/jobs/4500390002'>Job Application for Senior Software Developer at Copperleaf</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<h5><a href='https://boards.greenhouse.io/copperleaf/jobs/4500390002'>Job Application for Senior Software Developer at Copperleaf</a></h5> 
+<p><span class="badge badge-light">Vancouver, BC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698440924-fresher-software-engineer'>KMS Technology FRESHER SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
@@ -125,7 +133,7 @@
 <p><span class="badge badge-light">Vancouver, BC  Vancouver, BC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/realtor/e70c94a9-05af-46ed-9ee9-59c7e44e4d06'>realtor.com - Senior Software Engineer ? Managed Service Markets</a></h5> 
+<h5><a href='https://jobs.lever.co/realtor/e70c94a9-05af-46ed-9ee9-59c7e44e4d06'>realtor.com - Senior Software Engineer ? Managed Service Markets</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -155,7 +163,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/senior-software-engineer-ts-sci-with-polygraph-d_KrbwFySr6zkAaICoXfFy'>Senior Software Engineer - TS/SCI with Polygraph #0449 job at Stratus Solutions in McLean, VA, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/dae/jobs/senior-software-engineer-ts-sci-with-polygraph-d_KrbwFySr6zkAaICoXfFy'>Senior Software Engineer - TS/SCI with Polygraph #0449 job at Stratus Solutions in McLean, VA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Mc Lean, VAMc Lean, VA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -199,7 +207,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/7v1DShLMAa/Software-EngineerFull-Stack-Developer'>Software Engineer/Full Stack Developer - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/7v1DShLMAa/Software-EngineerFull-Stack-Developer'>Software Engineer/Full Stack Developer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA  San Francisco</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -255,7 +263,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/blacklane/jobs/4426622002'>Job Application for Backend Software Engineer (f/m/d) at BLACKLANE</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blacklane/jobs/4426622002'>Job Application for Backend Software Engineer (f/m/d) at BLACKLANE</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -413,7 +421,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409807-entry-level-software-engineer'>LaunchCode Entry Level Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409807-entry-level-software-engineer'>LaunchCode Entry Level Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -437,15 +445,7 @@
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=ocdSafwb&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nAtvnMwc'>MORI Associates, Inc. Careers - Embedded Real-Time Software Engineer - NASA - autonomous air vehicles</a></h5> 
-<p><span class="badge badge-light">Mountain View, California</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://scope-content-ag.breezy.hr/p/fad6d7982e5e-senior-software-engineer-f-r-b2b-software-in-z-rich'>Senior Software Engineer f?r B2B-Software in Z?rich at Scope Content AG</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
